--- a/GestioneSegreteria2019/WebContent/index.html
+++ b/GestioneSegreteria2019/WebContent/index.html
@@ -5,6 +5,32 @@
 		<title>Pagina di gestione segreteria</title>
 	</head>
 	<body>
-		Benvenuto nella pagina di gestione della segreteria
+		<a href="https://www.unical.it">
+		<img src="Images/logo.jpg" width="430" height="50" /> </a>
+		<h1>Portale segreteria studenti</h1>
+		<h2>Gestisci gli studenti</h2>
+		<h3>Homepage</h3>
+		<p>
+			Benvenuto nella pagina di <strong> gestione della segreteria </strong>.<br>
+			Naviga tra <u>queste pagine</u> per vedere tutte le <i>funzionalità 
+			offerte </i> dal sito della segreteria.
+		</p>
+		<p>
+			Utilizza il seguente menù per navigare:<br>
+			<ul>
+				<li>Studenti
+					<ol>
+						<li><a href="ElencoStudenti.html">Elenco studenti</a></li>
+						<li><a href="GestioneStudenti/IscriviStudenti.html">Iscrivi studente</a></li>					
+					</ol>	
+				</li>
+				<li>Corsi</li>
+				<li>Corsi di laurea</li> 
+				<li>Dipartimenti</li>
+			</ul>
+		</p>
+		<p>
+			Felice navigazione.
+		</p>
 	</body>
 </html>
